Добавил нормальные коннекторы к InvestFound и Tinkoff

--- a/3. Analysis.ipynb
+++ b/3. Analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6c8dc5d4-9b0d-44c0-aa6b-a69da64fe2a1",
+   "metadata": {},
+   "source": [
+    "[ ] Чаще покупаю на повышение средней цены или понижение?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dbca1f9f-1e65-44c7-adec-bdf0307696a6",
@@ -18,6 +26,26 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44c723bf-5f06-4012-99f7-7f9a9121aaba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.dates import MonthLocator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6155a57-03bf-4fae-bf6c-493f266c14e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "month_locator = MonthLocator()"
    ]
   },
   {
@@ -46,22 +74,62 @@
     "operations = pd.read_csv('data/tinkoff/operations.csv', index_col='id', parse_dates=['dt']).sort_values(by='dt')\n",
     "operations['total_price'] = operations['total_price'].apply(lambda x: -x)\n",
     "operations['count'] = operations.apply(lambda x: -x['count'] if x['operation_type'] == 'sell' else x['count'], axis=1)\n",
-    "operations = operations[operations['operation_type'].isin(['buy', 'sell'])]\n",
+    "operations = operations[operations['operation_type'].isin(['buy', 'sell', 'buy_card'])]\n",
+    "# operations = operations.groupby('ticker', as_index=False).first()\n",
     "\n",
-    "buy_list = operations[['dt', 'ticker', 'operation_type', 'count', 'unit_price', 'total_price']]\n",
+    "buy_list = operations[['dt', 'isin', 'ticker', 'operation_type', 'count', 'unit_price', 'total_price']]\n",
     "buy_list['date'] = buy_list['dt'].dt.date\n",
     "buy_list['cum_count'] = buy_list.groupby('ticker')['count'].cumsum()\n",
     "buy_list['cum_spent'] = buy_list.groupby('ticker')['total_price'].cumsum()\n",
-    "buy_list['avg_price'] = buy_list['cum_spent'] / buy_list['cum_count']\n",
+    "buy_list['avg_price'] = buy_list.apply(lambda x: None if x['cum_count'] == 0 else x['cum_spent'] / x['cum_count'], axis=1)\n",
     "buy_list.head()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4eccf1ab-694a-4bc0-9e47-b190f550f74a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea0108c9-38d6-435b-af0c-c38dd182058f",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Данные котировок "
+    "ticker_cumcount = buy_list.groupby('ticker').last()['cum_count'] > 0\n",
+    "active_ticker = ticker_cumcount[ticker_cumcount].index\n",
+    "buy_list = buy_list[buy_list['ticker'].isin(active_ticker)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45ef811c-8696-4db4-a570-3fe9be31975d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# count_l = buy_list['count'].apply(lambda x: [] if pd.isnull(x) else [int(x)])\n",
+    "# cum_list_count = count_l.groupby(buy_list['ticker']).apply(lambda x: x.cumsum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "292ff951-4a06-4ef0-8079-e4ff8c9663b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spent_l = buy_list['total_price'].apply(lambda x: [] if pd.isnull(x) else [x])\n",
+    "# cum_list_spent = spent_l.groupby(buy_list['ticker']).apply(lambda x: x.cumsum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50b0fcb5-a5f2-4e6f-b33a-4c89281e0524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# buy_list['list_buy'] = [\n",
+    "#     [(x, y) for x, y in zip(*zip_first)]\n",
+    "#     for zip_first in list(zip(cum_list_count, cum_list_spent))\n",
+    "# ]"
    ]
   },
   {
@@ -79,7 +147,7 @@
     "          .rename(columns={'dt': 'date'})\n",
     "          .sort_values(by='date')\n",
     "          .reset_index(drop=True)\n",
-    "          .assign(ticker=path.stem))\n",
+    "          .assign(isin=path.stem))\n",
     "    df['date'] = df['date'].dt.date\n",
     "    stocks.append(df)\n",
     "stocks = pd.concat(stocks, axis=0)"
@@ -100,15 +168,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_list = stocks.merge(buy_list[['date', 'ticker', 'operation_type', 'cum_count', 'cum_spent', 'avg_price']], on=['date', 'ticker'], how='left')\n",
-    "# \"распространяем\" данные на последующие записи после покупок\n",
-    "merged_list.loc[:, ['cum_count', 'cum_spent', 'avg_price']] = merged_list.groupby('ticker').transform(lambda x: x.fillna(method='ffill'))\n",
+    "merged_list = stocks.merge(buy_list[['date', 'isin', 'ticker', 'operation_type', 'cum_count', 'cum_spent', 'avg_price']], on=['date', 'isin'], how='left')\n",
+    "merged_list.loc[:, ['ticker', 'cum_count', 'cum_spent', 'avg_price']] = merged_list.groupby('isin').ffill()[['ticker', 'cum_count', 'cum_spent', 'avg_price']]\n",
     "# подсчет итоговой прибыли в абсолютном значении\n",
     "merged_list['profit'] = merged_list.apply(lambda x: x['cum_count'] * (x['close_price'] - x['avg_price']), axis=1)\n",
     "# подсчет итоговой прибыли в процентах\n",
     "merged_list['profit_percent'] = merged_list.apply(lambda x: x['cum_count'] * (x['close_price'] - x['avg_price']) / x['cum_spent'], axis=1).mul(100)\n",
     "# удаляем записи, где отсутствует общее количество акций\n",
-    "merged_list = merged_list.dropna(subset=['cum_count'])"
+    "merged_list.loc[merged_list['cum_count'] == 0, 'avg_price'] = None\n",
+    "merged_list = merged_list.dropna(subset=['cum_count', 'avg_price'])"
    ]
   },
   {
@@ -189,6 +257,7 @@
     "plt.title('График прибыльности во времени')\n",
     "plt.tight_layout()\n",
     "plt.gcf().autofmt_xdate()\n",
+    "plt.gca().xaxis.set_major_locator(month_locator)\n",
     "plt.savefig('artifacts/profit.png')"
    ]
   },
@@ -232,6 +301,7 @@
     "plt.title('График прибыльности по типам')\n",
     "plt.tight_layout()\n",
     "plt.gcf().autofmt_xdate()\n",
+    "plt.gca().xaxis.set_major_locator(month_locator)\n",
     "plt.savefig('artifacts/type_profit.png')"
    ]
   },
@@ -317,9 +387,10 @@
     "    lns = l1+l2\n",
     "    labs = [l.get_label() for l in lns]\n",
     "    ax.legend(lns, labs, loc=0)\n",
+    "    ax.xaxis.set_major_locator(month_locator)\n",
     "    \n",
     "plt.tight_layout()\n",
-    "plt.savefig('artifacts/price_vs_profit.png');"
+    "plt.savefig('artifacts/price_vs_profit.png')"
    ]
   },
   {
@@ -339,7 +410,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt_price = stocks[['date', 'ticker', 'close_price']].set_index(['date', 'ticker']).unstack()\n",
+    "dt_price = merged_list[['date', 'ticker', 'close_price']].drop_duplicates()\n",
+    "dt_price = dt_price.set_index(['date', 'ticker']).unstack()\n",
     "dt_price.columns = [c[1] for c in dt_price.columns]\n",
     "dt_price = dt_price.dropna()\n",
     "\n",
@@ -374,6 +446,7 @@
     "plt.grid(linestyle='--', alpha=0.3)\n",
     "plt.title('График прибыльности акций по странам')\n",
     "plt.tight_layout()\n",
+    "plt.gca().xaxis.set_major_locator(month_locator)\n",
     "plt.savefig('artifacts/country_stock_profit.png')\n",
     "\n",
     "fig = plt.figure(figsize=(20, 10))\n",
@@ -382,6 +455,7 @@
     "plt.grid(linestyle='--', alpha=0.3)\n",
     "plt.title('График прибыльности облигаций по странам')\n",
     "plt.tight_layout()\n",
+    "plt.gca().xaxis.set_major_locator(month_locator)\n",
     "plt.savefig('artifacts/country_bond_profit.png')"
    ]
   }
